# lumen

./: .gitignore  Cargo.toml  README.md  lumen.db-shm  lumen.db-wal
app/: Cargo.toml
app/icons/: lumen.icns
app/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  foreground.rs  fullscreen.rs  icon.rs  idle.rs  lib.rs  process_info.rs  traits.rs  types.rs  window_handle.rs
core/src/platform/: mod.rs
core/src/platform/linux/: foreground.rs  fullscreen.rs  idle.rs  mod.rs  process_info.rs
core/src/platform/macos/: foreground.rs  fullscreen.rs  idle.rs  mod.rs  process_info.rs
core/src/platform/windows/: foreground.rs  fullscreen.rs  icon.rs  idle.rs  mod.rs  process_info.rs
scripts/: make_bundle.sh
storage/: Cargo.toml
storage/src/: lib.rs
ui/: Cargo.toml
ui/src/: chrome.rs  lib.rs  render.rs
