[package]
name = "lumen-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lumen"
path = "src/main.rs"

# Убираем консольное окно в релизе (Windows subsystem)
[package.metadata.winres]
OriginalFilename = "lumen.exe"

# macOS .app бандл (cargo bundle --release)
[package.metadata.bundle]
name = "Lumen"
identifier = "com.lumenapp.Lumen"
icon = ["icons/lumen.icns"]
category = "Utilities"
minimum_system_version = "11.0"
short_description = "Screen-time tracker"
# Без LSUIElement — полноценное GUI-приложение с иконкой в Dock.

[dependencies]
lumen-core.workspace = true
lumen-storage.workspace = true
lumen-ui.workspace = true
tray-icon.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
winit.workspace = true
image.workspace = true
