[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true

[dependencies]
windows.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb.workspace = true
libc.workspace = true
