[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true

[dependencies]
windows.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb.workspace = true
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation = { workspace = true, features = ["NSNotification", "NSObject", "NSString", "NSURL", "NSDictionary", "NSGeometry"] }
objc2-app-kit = { workspace = true, features = ["NSWorkspace", "NSRunningApplication", "NSApplication", "NSImage", "NSGraphicsContext"] }
libc.workspace = true
