[package]
name = "lumen-ui"
version.workspace = true
edition.workspace = true

[dependencies]
lumen-core.workspace = true
lumen-storage.workspace = true
winit.workspace = true
softbuffer.workspace = true
tiny-skia.workspace = true
fontdue.workspace = true
chrono.workspace = true
anyhow.workspace = true
windows.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
